# hl-craft

./: .gitignore  2  CMakeLists.txt  README.md
client-render/src/: screen.c  world.c
client-render/src/containers/: triangle.c
core/src/: primitives.c
core/src/world/: visible_world.c
hl-craft/inc/: input-helper.h
hl-craft/src/: input-helper.c  main.c
inc/client-render/: scene.h  screen.h  texture.h  world.h
inc/client-render/containers/: triangle.h
inc/core/: primitives.h  texture.h  vector.h
inc/core/world/: block.h  chunk.h  visible_world.h
